# QuantumOpt

./: .gitignore  README.md  conftest.py  package_design.md  pyproject.toml  requirements.txt  run_webapp.sh  test_objective.py  test_quantum_opt.py
docs/: api.md  package_design.md  testing.md  web_interface.md
examples/: gf_Raman_nevergrad.py  queue_example.py  web_example.py
examples/simple-ui-test/: README.md
examples/simple-ui-test/src/: SimpleOptimization.css  SimpleOptimization.test.tsx  SimpleOptimization.tsx  test_integration.py
src/: index.css
src/__tests__/: OptimizationPlot.test.tsx
src/quantum_opt/: __init__.py
src/quantum_opt/optimizers/: __init__.py  base_optimizer.py  global_optimizer.py  local_optimizer.py  optimization_schemas.py
src/quantum_opt/queue/: __init__.py  manager.py  task.py  test_manager.py
src/quantum_opt/schemas/: __init__.py  api.py  events.py
src/quantum_opt/utils/: __init__.py  event_system.py  events.py
src/quantum_opt/visualization/: __init__.py  plot_manager.py  progress_tracking.py
src/quantum_opt/web/: __init__.py  run.py
src/quantum_opt/web/backend/: dependencies.py  main.py  queue_api.py  websocket_manager.py
src/quantum_opt/web/examples/: README.md
src/quantum_opt/web/frontend/: index.html  jest.config.js  package-lock.json  package.json  (+2 more)
tests/: test_api_endpoints.py  test_events.py  test_global_optimizer.py  test_optimization.py  test_optimizers.py  test_queue.py  test_queue_core.py  test_queue_visualization.py  test_simple_ui.py  test_task.py  test_web_api.py  test_web_backend.py  test_websocket.py
(+26 files in other folders)
